# repro-rules-ts-issue-111

./: BUILD.bazel  README.md  package.json  tsconfig.json
