load("@aspect_rules_ts//ts:defs.bzl", "ts_project", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")

ts_project(
    name = "index",
    srcs = [
        "index.ts",
    ],
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
    ],
)

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
)

npm_link_all_packages(name = "node_modules")
